@@ -135,11 +135,11 @@ static void default_fatal_uncaught_exception(value exn)
 
 int caml_abort_on_uncaught_exn = 0; /* see afl.c */
 
-void caml_fatal_uncaught_exception(value exn)
+static void handle_uncaught_exception(value exn)
 {
-  const value *handle_uncaught_exception;
+  const value *handle_uncaught_exception_caml;
 
-  handle_uncaught_exception =
+  handle_uncaught_exception_caml =
     caml_named_value("Printexc.handle_uncaught_exception");
 
   /* Prevent asynchronous exceptions while [handle_uncaught_exception]
@@ -147,15 +147,29 @@ void caml_fatal_uncaught_exception(value exn)
      until the end of the program. */
   caml_mask(CAML_MASK_UNINTERRUPTIBLE);
 
-  if (handle_uncaught_exception != NULL)
-    /* [Printexc.handle_uncaught_exception] does not raise exception. */
-    caml_callback2(*handle_uncaught_exception, exn, Val_bool(DEBUGGER_IN_USE));
+  if (handle_uncaught_exception_caml != NULL)
+    /* [Printexc.handle_uncaught_exception] does not raise exceptions. */
+    caml_callback2(*handle_uncaught_exception_caml, exn,
+                   Val_bool(DEBUGGER_IN_USE));
   else
     default_fatal_uncaught_exception(exn);
+}
+
+void caml_fatal_uncaught_exception(value exn)
+{
+  handle_uncaught_exception(exn);
   /* Terminate the process */
   if (caml_abort_on_uncaught_exn) {
     abort();
   } else {
     exit(2);
   }
+}
+
+CAMLprim value caml_uncaught_exception_in_destructor(value exn)
+{
+  handle_uncaught_exception(exn);
+  caml_fatal_error("Uncaught exception in destructor");
+  // does not return
+  return Val_unit;
 }
