@@ -34,7 +34,7 @@ val negate : ('a -> bool) -> ('a -> bool)
 (** [negate p] is the negation of the predicate function [p]. For any
     argument [x], [(negate p) x] is [not (p x)]. *)
 
-(** {1:exception Exception handling} *)
+(** {1:exception Exception safety} *)
 
 val protect : finally:(unit -> unit) -> (unit -> 'a) -> 'a
 (** [protect ~finally work] invokes [work ()] and then [finally ()]
@@ -43,12 +43,12 @@ val protect : finally:(unit -> unit) -> (unit -> 'a) -> 'a
     [finally ()] raises an exception, then the exception
     {!Finally_raised} is raised instead.
 
-    [protect] can be used to enforce local invariants whether [work ()]
-    returns normally or raises an exception. However, it does not
+    [protect] can be used to enforce local invariants whether [work
+    ()] returns normally or raises an exception. However, it does not
     protect against unexpected exceptions raised inside [finally ()]
     such as {!Stdlib.Out_of_memory}, {!Stdlib.Stack_overflow}, or
-    asynchronous exceptions raised by signal handlers
-    (e.g. {!Sys.Break}).
+    asynchronous exceptions raised by signal handlers (e.g.
+    {!Sys.Break}). For resource-safety, see instead {!with_resource}.
 
     Note: It is a {e programming error} if other kinds of exceptions
     are raised by [finally], as any exception raised in [work ()] will
@@ -61,3 +61,49 @@ exception Finally_raised of exn
     an unexpected exception or a programming error. As a general rule,
     one should not catch a [Finally_raised] exception except as part of
     a catch-all handler. *)
+
+val with_resource :
+  acquire:('a -> 'r) -> 'a -> scope:('r -> 'b) -> release:('r -> unit) -> 'b
+(** [with_resource ~acquire x work ~release] invokes [acquire x], then
+    invokes [work] on the resulting value, and then invokes [release]
+    on the value, whether [work] returns or raises an exception. The
+    result of [work] is then produced, whether it is a value or an
+    exception.
+
+    It is guaranteed that [release] is called upon return of
+    [with_resource] on the result of [acquire] if and only if the
+    latter returned normally. During the execution of acquire and
+    release, asynchronous callbacks that can raise exceptions are
+    delayed.
+
+    If [release] raises an exception, then it is treated as a fatal
+    error similarly to an uncaught exception. It executes [at_exit]
+    handlers and brings the program to an early [exit(2)].
+
+    The purpose of [with_resource] is to offer guarantees about the
+    release of system or custom resources. It can therefore be used to
+    ensure consistency of state, even in the event of unexpected and
+    asynchronous exceptions.
+
+    To achieve this, it is sufficient to fulfill the following
+    conditions:
+
+    1) the acquisition either succeeds, or if it fails, it does so by
+       raising an exception, without having acquired the resource, for
+       instance by undoing changes (strong exception safety);
+
+    2) the release of the resource never fails, in particular it never
+       raises (no-raise guarantee).
+
+    To help write correct acquisition and release functions,
+    asynchronous exceptions (e.g. {!Sys.Break}) are guaranteed not to
+    occur during acquisition and release. Care must still be taken
+    regarding other unexpected exceptions such as
+    {!Stdlib.Out_of_memory} or {!Stdlib.Stack_overflow}.
+
+    For an implementation of an "unwind-protect" combinator, which
+    instead allows arbitrary code during clean-up, to enforce local
+    invariants, see {!protect}.
+
+    @since 4.XX
+*)
